modified filedownloader